# Project-1

./: .gitignore  README.md
Backend/: CMakeLists.txt  customers.json  invoices.json  reservations.json  rooms.json
Backend/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Backend/include/: AdvanceFeatures.h  CustomerManagement.h  DataGenerator.h  InvoiceManagement.h  JsonHelper.h  ReservationManagement.h  RoomManagement.h  ServiceManagement.h  Structures.h  httplib.h
Backend/src/: AdvanceFeatures.cpp  BenchmarkRunner.cpp  CustomerManagement.cpp  DataGenerator.cpp  InvoiceManagement.cpp  JsonHelper.cpp  ReservationManagement.cpp  RoomManagement.cpp  ServiceManagement.cpp  Structures.cpp  server_http.cpp
Frontend/: AddCustomerDialog.html  AddReservationDialog.html  AddRoomDialog.html  AddServiceDialog.html  AddServiceDialogContent.html  AdvanceFeaturesWidget.html  CheckInDialog.html  CheckOutDialog.html  CheckOutWidget.html  CustomerManagementWidget.html  Dashboard.html  DeleteCustomerDialog.html  DeleteRoomDialog.html  FindCombinationDialog.html  InvoiceManagementWidget.html  ReservationManagementWidget.html  RoomManagementWidget.html  ServiceManagementWidget.html  sidebar.html
Frontend/js/: advanced-features.js  api.js  checkout-dialog.js  checkout.js  components.js  customer-management-widget.js  dashboard.js  invoice-management.js  reservation-management-widget.js  room-management-widget.js  service-management.js  state.js  utils.js
